# wofi-manager

./: Cargo.toml  README.md
src/: main.rs
